[package]
name = "briq-utils"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5", features = ["derive"] }
convert_case = "0.6"
csv = "1.3.1"
phf = { version = "0.12.1", features = ["macros"] }
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["blocking"] }
serde =  { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.142"
